<resources>
    <string name="app_name">Tugas Besar PSI</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="login_first">Already Have an Account?</string>
    <string name="login_first2">Enter Here</string>
    <string name="register_first">Dont have an account yet?</string>
    <string name="register_first2">Create Here</string>
    <string name="history_first">Please Login First</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="terms"><u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="address">Address</string>
    <string name="rumah_sakit_malang">MALANG HOSPITAL</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="add">Add</string>
    <string name="menambah_rumah_sakit">ADD HOSPITAL</string>
    <string name="upload_image">Upload Image</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_age">Doctor Age</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="doctor_gender">Doctor Gender</string>
    <string name="doctor_specialist">Doctor Specialist</string>
    <string name="detail">Detail</string>
    <string name="detail_hospital">DETAIL HOSPITAL</string>
    <string name="doctors">Doctors</string>
    <string name="age">"%s" tahun</string>
    <string name="gender">Gender</string>
    <string name="specialist">Specialist</string>
    <string name="order">Order</string>
    <string name="there_is_no_history">There Is No History</string>
    <string name="history">HISTORY</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_hospital">Update Hospital</string>
</resources>