<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home_admin">

    <fragment
        android:id="@+id/navigation_home_admin"
        android:name="com.example.tugasbesarpsi.ui.homeadmin.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" >
        <action
            android:id="@+id/action_navigation_home_admin_to_anvigation_update"
            app:destination="@id/navigation_update" />
    </fragment>

    <fragment
        android:id="@+id/navigation_update"
        android:name="com.example.tugasbesarpsi.ui.update.UpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_anvigation_update_to_navigation_home_admin"
            app:destination="@id/navigation_home_admin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.tugasbesarpsi.ui.add.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tugasbesarpsi.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>