<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_Picture"
            android:layout_width="144dp"
            android:layout_height="196dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name"
            card_view:layout_constraintStart_toEndOf="@id/iv_Picture"
            card_view:layout_constraintTop_toTopOf="@id/iv_Picture"/>

        <TextView
            android:id="@+id/tv_Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:text="@string/age"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            card_view:layout_constraintTop_toBottomOf="@id/tv_Name"
            card_view:layout_constraintStart_toEndOf="@id/iv_Picture"/>

        <TextView
            android:id="@+id/tv_Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:text="@string/gender"
            android:layout_marginStart="16dp"
            card_view:layout_constraintTop_toBottomOf="@id/tv_Age"
            card_view:layout_constraintStart_toEndOf="@id/iv_Picture"/>

        <TextView
            android:id="@+id/tv_Specialist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:text="@string/specialist"
            android:layout_marginStart="16dp"
            card_view:layout_constraintTop_toBottomOf="@id/tv_Gender"
            card_view:layout_constraintStart_toEndOf="@id/iv_Picture"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_fill_button"
            android:text="@string/order"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            card_view:layout_constraintStart_toEndOf="@id/iv_Picture"
            card_view:layout_constraintTop_toBottomOf="@id/tv_Specialist" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>