<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_Profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_account_circle_green_24"
        app:civ_border_color="@color/green"
        app:civ_border_width="3dp"
        android:visibility="invisible"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_NamaLengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="21dp"
        app:layout_constraintStart_toEndOf="@id/iv_Profile"
        app:layout_constraintTop_toTopOf="@id/iv_Profile" />

    <TextView
        android:id="@+id/tv_Nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/phone"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/tv_NamaLengkap"
        app:layout_constraintTop_toBottomOf="@id/tv_NamaLengkap" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/iv_Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_Logo"
        android:layout_width="256sp"
        android:layout_height="256dp"
        android:src="@drawable/logo_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_First"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/login_first"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/iv_Logo"
        app:layout_constraintStart_toStartOf="@id/iv_Logo"
        app:layout_constraintEnd_toEndOf="@id/iv_Logo"/>

    <TextView
        android:id="@+id/tv_LoginFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/login_first2"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tv_First"
        app:layout_constraintStart_toStartOf="@id/tv_First"
        app:layout_constraintEnd_toEndOf="@id/tv_First" />

    <TextView
        android:id="@+id/tv_First2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/register_first"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_RegisterFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/register_first2"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toEndOf="@id/tv_First2"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>