<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_fill"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_Hospital" />

        <ImageView
            android:id="@+id/btn_Back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back_logo"
            android:layout_marginTop="42dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_hospital"
            android:textSize="24sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/btn_Back"
            app:layout_constraintTop_toTopOf="@id/btn_Back"
            app:layout_constraintBottom_toBottomOf="@id/btn_Back" />

        <ImageView
            android:id="@+id/iv_Hospital"
            android:layout_width="168dp"
            android:layout_height="168dp"
            tools:src="@tools:sample/avatars"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_Back"
            app:layout_constraintStart_toStartOf="parent" />


        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/iv_Hospital"
            app:layout_constraintStart_toEndOf="@id/iv_Hospital"
            app:layout_constraintEnd_toEndOf="parent">
            <TableRow>
                <TextView
                    android:id="@+id/tv_HospitalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_name"
                    android:textSize="18sp"
                    android:fontFamily="@font/alatsi"
                    android:textColor="@color/white"
                    android:singleLine="false"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@id/iv_Hospital"
                    app:layout_constraintTop_toTopOf="@id/iv_Hospital" />

            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tv_HospitalAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_address"
                    android:textSize="14sp"
                    android:fontFamily="@font/alatsi"
                    android:textColor="@color/grey"
                    android:singleLine="false"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@id/iv_Hospital"
                    app:layout_constraintTop_toBottomOf="@id/tv_HospitalName" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_Doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctors"
            android:textSize="24sp"
            android:fontFamily="@font/alatsi"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_Hospital" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:visibility="visible"
            tools:listitem="@layout/item_card_doctor"
            app:layout_constraintTop_toBottomOf="@id/tv_Doctor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>