<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update.UpdateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_fill"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@id/iv_Picture" />

        <ImageView
            android:id="@+id/btn_Back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back_logo"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_hospital"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:fontFamily="@font/alatsi"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintStart_toEndOf="@id/btn_Back"
            app:layout_constraintTop_toTopOf="@id/btn_Back"
            app:layout_constraintBottom_toBottomOf="@id/btn_Back"/>

        <ImageView
            android:id="@+id/iv_Picture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/upload_button"
            android:src="@drawable/upload_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Title" />

        <TextView
            android:id="@+id/tv_Upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textSize="24sp"
            android:fontFamily="@font/alatsi"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/iv_Picture"
            app:layout_constraintEnd_toEndOf="@id/iv_Picture"
            app:layout_constraintTop_toBottomOf="@id/iv_Picture" />

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital_name"
            android:textSize="18sp"
            android:fontFamily="@font/alatsi"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_Upload"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/beige"
            app:hintTextColor="@color/beige"
            app:hintEnabled="false"
            android:layout_marginTop="9dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Name">
            <EditText
                android:id="@+id/edt_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital_address"
            android:textSize="18sp"
            android:fontFamily="@font/alatsi"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/txt_Name"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/beige"
            app:hintTextColor="@color/beige"
            app:hintEnabled="false"
            android:layout_marginTop="9dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Address">
            <EditText
                android:id="@+id/edt_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Update"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/update"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/alatsi"
            android:background="@drawable/rounded_fill_button"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintTop_toBottomOf="@id/txt_Address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>